# KratosRuntime

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE.md  README.md  copyright.py  generate.bat  generate.sh
include/: export.h  kratos_export_prot.h  kratos_platform_prot.h
install/lib/cmake/Kratos/: KratosRuntimeConfig.cmake  KratosRuntimeTargets-release.cmake
src/: kratos_platform_prot.cpp  test_prot.cpp
test/: main.c
